<resources>
    <string name="app_name">AndroidTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="crossed"><strike>$ 3430.00</strike></string>
    <string name="header">Tap &amp; hold the product to add to cart</string>
    <string name="sort">SORT BY</string>
    <string name="desc">The Karissa V-Neck Tee features a semi-fitted shape that\'s flattering for every figure. You can hit the gym with confidence while it hugs curves and hides common \"problem\" areas. Find stunning women\'s cocktail dresses and party dresses.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="description">Description</string>
    <string name="circle_num_template">1</string>
    <string name="password">password</string>
    <string name="put_here_your_email_address">email address</string>
    <string name="email">Email</string>
    <string name="login_page">Login Page</string>
    <string name="login">Login</string>
    <string name="password_cap">Password</string>
    <string name="please_login">Please login</string>
    <string name="please_sign_up">Please sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="name">name</string>
</resources>