<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/tool_mmargin"
        android:background="@drawable/layout_bg"
        android:paddingStart="@dimen/vsmall_margin"
        android:paddingTop="@dimen/vsmall_margin"
        android:paddingEnd="@dimen/vsmall_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/please_sign_up"
            android:textColor="@color/skip"
            android:textSize="22sp"
            android:id="@+id/textView_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/tool_smargin"
            android:layout_marginStart="@dimen/vsmall_margin"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/username"
            android:id="@+id/textView_name"
            android:layout_marginTop="@dimen/tool_mmargin"
            android:textSize="18sp"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@id/textView_login"
            app:layout_constraintStart_toStartOf="@id/textView_login"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:id="@+id/textView_username"
            android:layout_marginTop="@dimen/tool_mmargin"
            android:textSize="18sp"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@id/textView_name"
            app:layout_constraintStart_toStartOf="@id/textView_login"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password_cap"
            android:textSize="18sp"
            android:id="@+id/textView_password"
            android:layout_marginTop="@dimen/tool_mmargin"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@id/textView_username"
            app:layout_constraintStart_toStartOf="@id/textView_login"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/editText_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_name"
            app:layout_constraintBottom_toBottomOf="@id/textView_name"
            android:autofillHints="Email"
            android:hint="@string/name"
            android:layout_marginEnd="@dimen/tool_mmargin"
            android:singleLine="true"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/editText_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_username"
            app:layout_constraintBottom_toBottomOf="@id/textView_username"
            android:autofillHints="Email"
            android:hint="@string/put_here_your_email_address"
            android:layout_marginEnd="@dimen/tool_mmargin"
            android:singleLine="true"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editText_password"
            android:ems="10"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_password"
            app:layout_constraintBottom_toBottomOf="@id/textView_password"
            android:layout_marginStart="@dimen/tool_smargin"
            android:hint="@string/password"
            android:autofillHints="Password"
            android:layout_marginEnd="@dimen/tool_mmargin"

            android:singleLine="true"/>



        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/button_reg"
            app:layout_constraintTop_toBottomOf="@id/textView_password"
            app:layout_constraintStart_toStartOf="@id/textView_login"
            android:layout_marginTop="@dimen/tool_mmargin"
            android:textSize="18sp"
            android:textAllCaps="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>